--- a/TPFINAL/src/Vista/modificarUsuario.form
+++ b/TPFINAL/src/Vista/modificarUsuario.form
@@ -164,6 +164,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="usuarioNombre">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="usuarioNombreActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JComboBox" name="comboEstado">
           <Properties>
